--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "zod": "^3.25.42",
